tests/files/type_checker_tests/should_fail/018.cmdr
//Should fail when post incrementing something that isn't a variable
x = 2++;